--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
 
   <section class="hero-section">
     <!-- Banner -->
-    <div class="demo-banner">
-      🧪 <strong>CampusMart Demo Week!</strong> Try buying demo products like laptops or phones — ₹0 cost.
-      <br>Use Pay ID: <strong>pay_12345678</strong> at checkout! No real money will be deducted.
-    </div>
+  <div class="demo-banner">
+  🧪 <strong>CampusMart Demo Week!</strong> Try buying demo products like laptops or phones — ₹0 cost.
+  <br>Use Pay ID: <strong>pay_12345678</strong> at checkout!
+  <br>🛑 <strong>Note:</strong> These are <em>demo products only</em>. No real money will be deducted, and <strong>no actual products will be delivered</strong>. This is just for testing the CampusMart shopping experience.
+</div>
+
 
     <div class="hero-content">
       <h1 class="hero-title">Welcome to CampusMart</h1>
