--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@
   <!-- Floating Animated Banner -->
   <div id="floatingBanner">
     <div class="banner-content">
-      <span id="headlineText">🎉 <strong>0 Listing Fees</strong> for a Limited Time! Upload Free for 1 Week!</span>
+     <span id="headlineText">🎉 <strong>Post your product for FREE</strong> this week — no charges!</span>
+
       <div class="countdown" id="countdownTimer"></div>
     </div>
   </div>
